--- a/InfoCombattant.html
+++ b/InfoCombattant.html
@@ -14,7 +14,7 @@
 <body>
     <header id='navbar'></header>
     <main class="w-[480px] h-auto m-auto lg:w-[1140px] lg:m-auto">
-        <div class="w-[50vh] lg:flex lg:justify-between flex-col ">
+        <div class="w-[50vh] lg:flex lg:justify-between  ">
             <img src="images/boxe.jpg" alt="boxeur">
             <img src="images/boxe2.jpg" alt="boxeur2">
         </div>
