--- a/footer.html
+++ b/footer.html
@@ -1,4 +1,4 @@
-<footer class="bg-[#1B1F23] lg:mt-[8vh] text-center  lg:text-left  ">
+<footer class="bg-[#1B1F23] lg:mt-[8vh] text-center  lg:text-left w-full">
     <div class="bg-[#1B1F23] p-4 text-center text-surface text-white">
       © 2024 Copyright:
       <a href="https://github.com/Gifsta">Mon profil github</a>
