--- a/footer.html
+++ b/footer.html
@@ -1,3 +1,4 @@
+<!-- Footer qui sera afficher dans les pages principals du site web -->
 <footer class="bg-[#1B1F23] lg:mt-[8vh] text-center  lg:text-left w-full">
     <div class="bg-[#1B1F23] p-4 text-center text-surface text-white">
       © 2024 Copyright:
