--- a/combattant.html
+++ b/combattant.html
@@ -13,11 +13,15 @@
 </head>
 
 <body>
-
+    <!-- Appel de la navbar -->
     <header id="navbar"></header>
+    <!-- Appel du tableau -->
     <div id="wrapper"></div>
+    <!-- Appel du footer -->
     <footer id="footer"></footer>
+    <!-- Appel du script index.js qui permet de mettre en place le footer et le header  -->
     <script src="index.js"></script>
+    <!-- Affiche les données demander de Fighters.json dans le tableau puis rend les liens cliquable et donne l'id des combattant sur la redirection -->
     <script>
         fetch('json/Fighters.json')
             .then(rep => rep.json())
@@ -62,7 +66,9 @@
 
                         },
                     ],
+                    // Rajoute de la pagination 
                     pagination: true,
+                    // Permet de rechercher dans le tableau 
                     search: true,
                     data: rep
                 }).render(document.getElementById("wrapper"));
