--- a/header.html
+++ b/header.html
@@ -1,13 +1,14 @@
+<!-- Le header qui sera sur différentes pages principales du site  -->
 <nav x-data="{ mobileMenuIsOpen: false }" @click.away="mobileMenuIsOpen = false"
     class="flex items-center justify-between border-b border-slate-300 px-6 py-4 bg-[#1B1F23]"
     aria-label="penguin ui menu">
-    <!-- Brand Logo -->
+    <!--Logo -->
     <a href="index.html" class="text-2xl font-bold text-white flex">
         <img src="images/icones/logo.png" alt="UFCWeb-logo" class="w-10" />
         <span class="text-3xl">UF<span class="text-pink-700 text-3xl ">CW</span>eb</span>
 
     </a>
-    <!-- Desktop Menu -->
+    <!-- Menu -->
     <ul class="h-[10vh] hidden items-center gap-4 md:flex">
         <li><a href="index.html"
                 class=" text-2xl font-bold text-pink-700 underline-offset-2 hover:text-pink-700 focus:outline-none focus:underline"
@@ -22,7 +23,7 @@
                 class=" text-2xl font-medium text-slate-700 underline-offset-2 hover:text-pink-700 focus:outline-none focus:underline ">Contact</a>
         </li>
     </ul>
-    <!-- Mobile Menu Button -->
+    <!-- Menu version téléphone -->
     <button @click="mobileMenuIsOpen = !mobileMenuIsOpen" :aria-expanded="mobileMenuIsOpen"
         :class="mobileMenuIsOpen ? 'fixed top-6 right-6 z-20' : null" type="button" class="flex text-white  md:hidden"
         aria-label="mobile menu" aria-controls="mobileMenu">
@@ -35,7 +36,7 @@
             <path stroke-linecap="round" stroke-linejoin="round" d="M6 18 18 6M6 6l12 12" />
         </svg>
     </button>
-    <!-- Mobile Menu -->
+    <!-- Menu version téléphone -->
     <ul x-cloak x-show="mobileMenuIsOpen"
         x-transition:enter="transition motion-reduce:transition-none ease-out duration-300"
         x-transition:enter-start="-translate-y-full" x-transition:enter-end="translate-y-0"
