--- a/InfoCombattant.html
+++ b/InfoCombattant.html
@@ -14,13 +14,13 @@
 <body>
     <!-- Appel de la navbar -->
     <header id='navbar'></header>
-    <main class="w-[480px] h-auto m-auto lg:w-[1140px] lg:m-auto">
+    <main class="w-full h-auto m-auto lg:w-[1140px] lg:m-auto">
         <div class="w-[50vh] lg:flex lg:justify-between  ">
             <img src="images/boxe.jpg" alt="boxeur">
             <img src="images/boxe2.jpg" alt="boxeur2">
         </div>
         <!-- Affichage des données résultant de Fighters.json -->
-        <div class="mt-[5vh] lg:rounded-lg bg-[#1B1F23] text-white p-3 flex-col">
+        <div class="mt-[5vh] lg:rounded-lg bg-[#1B1F23] text-white p-3  flex flex-col">
             <h2 class="text-3xl font-mono	font-family: ui-monospace pb-2">Information du combattant</h2>
             <p>Prénom :
                 <span id="firstName"></span>
